# vision-processor

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  config.yml  documentation.md  geometry-divA.yml  geometry-divB.yml  pyproject.toml  robot-heights.yml  setup.sh  start_wrapper.sh
.zed/: debug.json
cmake/: FindDC1394.cmake
kernel/: blobList.cl  gradientDot.cl  resampling.cl
proto/: ssl_gc_common_pb2.py  ssl_gc_game_event_pb2.py  ssl_gc_game_event_pb2.pyi  ssl_gc_geometry_pb2.py  ssl_gc_referee_message_pb2.py  ssl_gc_referee_message_pb2.pyi  ssl_vision_detection.proto  ssl_vision_detection_pb2.py  ssl_vision_detection_pb2.pyi  ssl_vision_detection_tracked_pb2.py  ssl_vision_detection_tracked_pb2.pyi  ssl_vision_geometry_pb2.py  ssl_vision_geometry_pb2.pyi  ssl_vision_wrapper.proto  ssl_vision_wrapper_pb2.py  ssl_vision_wrapper_pb2.pyi  ssl_vision_wrapper_tracked_pb2.py  ssl_vision_wrapper_tracked_pb2.pyi
python/: geom_publisher.py  replay.py  visionsocket.py  ws_tail.py
src/: CameraModel.cpp  CameraModel.h  GroundTruth.cpp  Perspective.cpp  Perspective.h  Resources.cpp  Resources.h  blob_benchmark.cpp  geometry_benchmark.cpp  log.h  main.cpp  opencl.cpp  opencl.h  rtpstreamer.cpp  snapshotwriter.cpp  snapshotwriter.h  udpsocket.cpp  udpsocket.h
tools/: ws_tail.py
wrapper/: CLAUDE.md  README.md  __init__.py  __main__.py  bus.py  geometry.py  multicast.py  websocket.py
wrapper-frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
wrapper_backend/: CLAUDE.md  README.md  __init__.py  (+5 more)
(+23 files in other folders)
