[project]
name = "vision-wrapper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "protobuf>=7.34.1",
    "pyyaml>=6.0.3",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "mypy>=2.0.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
    "types-protobuf>=7.34.1.20260503",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.mypy]
files = ["wrapper"]
exclude = ["wrapper/proto/"]
mypy_path = "wrapper"

[tool.ruff]
src = ["wrapper"]
